# agentic-workflow-example

./: .gitignore  pyproject.toml
modules/01_cot/: main.py  utils.py
modules/01_cot/tools/: broadcast.py  research_aggregator.py  research_plan.py
modules/02_self_reflection/: main.py  utils.py
modules/02_self_reflection/tools/: internet_search.py  self_reflection.py
modules/03_agent/: main.py
modules/04_ocr/: main.py
modules/agno/01_basic_call/: main.py
modules/agno/02_system_prompt/: main.py
modules/agno/03_basic_memory/: main.py
modules/agno/04_function_calls/: main.py
